# friendsketch

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  elm-package.json  elm.json  friendsketch.cabal  index.html  netpinary.cabal  rust-toolchain.toml  stack.yaml
.cargo/: config
LICENSES/: elm-WebSocket  show-hide-icons  timer-icon
assets/: Index.html  index.html  ports.js  script-create.js  script-join.js  stylesheet.css
assets/games/classic/: index.html  stylesheet.css
assets/games/pintclone/: index.html  stylesheet.css
assets/lobby/: index.html  stylesheet.css
assets/lobby/create/: index.html
assets/lobby/join/: index.html
css/: index.css
documentation/: ClassicState.svgz  CompleteScoreboard.svgz  CreationPage.svgz  JoinHangupStates.svgz  Notes_Dessinator.txt  Notes_Friendsketch.txt  canvas_view.svgz  deploy-front.sh  deploy.sh  friendsketch.service  haskellfuncs.sh  notebook.zim  restsummary.sh
documentation/Notes_Dessinator/: Backend_API_specification.txt  Create_A_room_Page.txt  Pintclone_game_design.txt  Potential_names.txt  Roadblocks_&_current_issues.txt  devops.txt  market_research.txt
documentation/Notes_Dessinator/Pintclone_game_design/: graphic_design.txt
documentation/Notes_Friendsketch/: Backend_API_specification.txt  Backend_leave_handling.txt  Classic_mod_game_design.txt  Game_testing.txt  HTTP_API_specification.txt  Joining_a_game.txt  Pintclone_game_design.txt  Roadblocks_&_current_issues.txt  Word_management.txt  sketchfighters_game_design.txt
documentation/Notes_Friendsketch/Pintclone_game_design/: graphic_design.txt
front/: API.elm  Api.elm  Canvas.elm  Chat.elm  ElementRelativeMouseEvents.elm  Game.elm  Index.elm  Lobby.elm  NeatSocket.elm  Pintclone.elm  Ports.elm  Room.elm  TypeDecoders.elm
front/Art/: Canvas.elm  Toolbox.elm
front/Art/Canvas/: ServerMsgDecoder.elm
front/Canvas/: Stroke.elm  Toolbox.elm
front/Chat/: InputField.elm  Message.elm
front/Game/: Guess.elm  Room.elm
front/Lobby/: Create.elm  Join.elm  NameLists.elm
front/Pintclone/: Game.elm  Guess.elm  Room.elm
lobby/: Api.elm  Collection.elm  Difficulty.elm  Main.elm  Ports.elm
net/: Index.html  index.html  stylesheet
pages-server/: join-roomid-err.html  join-star-uid-err.html  join-star-uid.html
server/: API.hs  GameSocketListener.hs  Main.hs  MustacheTemplate.hs  Pintclone.hs  RestImpl.hs  RoomConnection.hs  WebSocketGame.hs  api.rs  games.rs  join.rs  main.rs  roomids.rs  server.rs  words.rs
server/api/: autode.rs  pages.rs  roomids.rs
server/api/roomids/: adjective.rs  animal.rs
server/games/: game.rs  party.rs  scores.rs  sketchfighters.rs  tugofsketch.rs
server/words/: builder.rs  collection.rs
src/: Art.elm  Chat.elm  Index.elm  Main.elm
src/Art/: Box.elm  Canvas.elm  GenericArt.elm  Pen.elm  RenderedCanvas.elm  Stroke.elm  Toolbox.elm  ToolboxMsg.elm
src/Art/Pen/: Mouse.elm  Remote.elm
src/Art/Tools/: ColorPicker.elm  SizePicker.elm
src/Chat/: InputField.elm  Message.elm  Room.elm
tests_terrible/: server_ws.sh
