[package]
name = "friendsketch-server"
description = "The backend software for friendsketch.com"
version = "0.1.0"
authors = ["Nicola Papale"]
edition = "2018"

[[bin]]
path = "server/main.rs"
name = "friendsketch"

[dependencies]
base64 = "0.10"
bytes = "0.4"
tokio-timer = "0.2.8"
quick-error = "1.2.2"
lazy_static = { version = "1.2.0", features = ["nightly"] }
arraydeque = "0.4"
bart = "0.1.4"
bart_derive = "0.1.4"
fxhash = "0.2.1"
slotmap = { version = "0.3", features = ["unstable"] }
rand = "0.6"
chashmap = "2.2"
warp = "0.1"
futures = "0.1"
percent-encoding = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.10"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.3"

[dev-dependencies]
pretty_assertions = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
