name: netpinary-server
version: 0.0.1
author: Nicola Papale
maintainer: nico.ppl@protonmail.com
copyright: 2017 Nicola Papale
build-type: Simple
cabal-version: >=1.10

executable netpinary-server
  hs-source-dirs: server
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends: base, text, websockets, aeson, bytestring
  default-language: Haskell2010
