name: netpinary-server
version: 0.0.1
author: Nicola Papale
maintainer: nico.ppl@protonmail.com
copyright: 2017 Nicola Papale
build-type: Simple
cabal-version: >=1.10

executable netpinary-server
  hs-source-dirs: server
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends: base
    , http-types >= 0.9.1
    , text
    , containers
    , string-random
    , aeson
    , websockets >= 0.12.2.0
    , wai-websockets >= 3.0.1.1
    , wai
    , wai-routes >= 0.10.0
    , wai-app-static
    , warp >=  3.2.13
  default-language: Haskell2010
